Expose more environment settings
Expose environment settings for additional installed apps (required for
the hastexo-xblock, for instance), the sysadmin dashboard on the LMS,
and allowing all advanced components on the CMS.

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -70,6 +70,13 @@ EDXAPP_MONGO_USER: 'edxapp'
 EDXAPP_MONGO_DB_NAME: 'edxapp'
 EDXAPP_MONGO_USE_SSL: False
 
+EDXAPP_MONGODB_LOG:
+  host: "{{ EDXAPP_MONGO_HOSTS[0] }}"
+  port: "{{ EDXAPP_MONGO_PORT }}"
+  user: "{{ EDXAPP_MONGO_USER }}"
+  password: "{{ EDXAPP_MONGO_PASSWORD }}"
+  db: "{{ EDXAPP_MONGO_DB_NAME }}"
+
 EDXAPP_MYSQL_DB_NAME: 'edxapp'
 EDXAPP_MYSQL_USER: 'edxapp001'
 EDXAPP_MYSQL_USER_ADMIN: 'root'
@@ -162,6 +169,9 @@ EDXAPP_ENABLE_AUTO_AUTH: false
 # Settings for enabling and configuring third party authorization
 EDXAPP_ENABLE_THIRD_PARTY_AUTH: false
 EDXAPP_ENABLE_OAUTH2_PROVIDER: false
+EDXAPP_ALLOW_ALL_ADVANCED_COMPONENTS: false
+EDXAPP_ADDL_INSTALLED_APPS: ""
+EDXAPP_THIRD_PARTY_AUTH_BACKENDS: []
 
 EDXAPP_ENABLE_MOBILE_REST_API: false
 
@@ -248,6 +258,7 @@ EDXAPP_FEATURES:
   CUSTOM_COURSES_EDX: "{{ EDXAPP_CUSTOM_COURSES_EDX }}"
   ENABLE_CSMH_EXTENDED: "{{ EDXAPP_ENABLE_CSMH_EXTENDED }}"
   ENABLE_READING_FROM_MULTIPLE_HISTORY_TABLES: "{{ EDXAPP_ENABLE_READING_FROM_MULTIPLE_HISTORY_TABLES }}"
+  ALLOW_ALL_ADVANCED_COMPONENTS: "{{ EDXAPP_ALLOW_ALL_ADVANCED_COMPONENTS }}"
 
 EDXAPP_BOOK_URL: ""
 # This needs to be set to localhost
@@ -770,6 +781,7 @@ edxapp_generic_auth_config:  &edxapp_generic_auth
   SWIFT_TEMP_URL_DURATION: "{{ EDXAPP_SWIFT_TEMP_URL_DURATION }}"
   SECRET_KEY:  "{{ EDXAPP_EDXAPP_SECRET_KEY }}"
   DOC_STORE_CONFIG: "{{ edxapp_generic_doc_store_config }}"
+  MONGODB_LOG: "{{ EDXAPP_MONGODB_LOG }}"
   XQUEUE_INTERFACE:
     basic_auth: "{{ EDXAPP_XQUEUE_BASIC_AUTH }}"
     django_auth: "{{ EDXAPP_XQUEUE_DJANGO_AUTH }}"
@@ -979,6 +991,8 @@ generic_env_config:  &edxapp_generic_env
   ELASTIC_SEARCH_CONFIG: "{{ EDXAPP_ELASTIC_SEARCH_CONFIG }}"
   PLATFORM_TWITTER_ACCOUNT: "{{ EDXAPP_PLATFORM_TWITTER_ACCOUNT }}"
   PLATFORM_FACEBOOK_ACCOUNT: "{{ EDXAPP_PLATFORM_FACEBOOK_ACCOUNT }}"
+  ADDL_INSTALLED_APPS: "{{ EDXAPP_ADDL_INSTALLED_APPS }}"
+  THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
 
 lms_auth_config:
   <<: *edxapp_generic_auth
