Modern ansible.cfg options
Enable smart gathering, and smart transport selection, with pipelining
for SSH.

--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -8,6 +8,9 @@ jinja2_extensions=jinja2.ext.do
 host_key_checking = False
 roles_path=../../ansible-roles/roles:../../ansible-private/roles:../../ansible-roles/
 ansible_managed=This file is created and updated by ansible, edit at your peril
+gathering = smart
+transport = smart
 
 [ssh_connection]
-ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath="~/.ansible/tmp/ansible-ssh-%h-%p-%r" -o ServerAliveInterval=30
+pipelining = True
+ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath="~/.ansible/tmp/ansible-ssh-%h-%p-%r" -o ServerAliveInterval=30 -o TCPKeepAlive=yes -o ServerAliveCountMax=3 -o ForwardAgent=yes
