Add more Swift auth variables
Some Swift deployments require additional authentication variables.

--- a/playbooks/roles/xqueue/defaults/main.yml
+++ b/playbooks/roles/xqueue/defaults/main.yml
@@ -35,9 +35,17 @@ XQUEUE_SWIFT_USERNAME: ''
 XQUEUE_SWIFT_KEY: ''
 XQUEUE_SWIFT_TENANT_ID: ''
 XQUEUE_SWIFT_TENANT_NAME: ''
+XQUEUE_SWIFT_USER_DOMAIN_NAME: ''
+XQUEUE_SWIFT_USER_DOMAIN_ID: ''
+XQUEUE_SWIFT_PROJECT_DOMAIN_NAME: ''
+XQUEUE_SWIFT_PROJECT_DOMAIN_ID: ''
 XQUEUE_SWIFT_AUTH_URL: ''
 XQUEUE_SWIFT_AUTH_VERSION: 1
 XQUEUE_SWIFT_REGION_NAME: ''
+XQUEUE_SWIFT_USE_TEMP_URLS: False
+XQUEUE_SWIFT_TEMP_URL_KEY: ''
+XQUEUE_SWIFT_AUTO_CREATE_CONTAINER: False
+XQUEUE_SWIFT_AUTO_CREATE_CONTAINER_PUBLIC: False
 
 XQUEUE_BASIC_AUTH_USER: "{{ COMMON_HTPASSWD_USER }}"
 XQUEUE_BASIC_AUTH_PASSWORD: "{{ COMMON_HTPASSWD_PASS }}"
@@ -103,9 +111,17 @@ xqueue_auth_config:
   SWIFT_KEY: "{{ XQUEUE_SWIFT_KEY }}"
   SWIFT_TENANT_ID: "{{ XQUEUE_SWIFT_TENANT_ID }}"
   SWIFT_TENANT_NAME: "{{ XQUEUE_SWIFT_TENANT_NAME }}"
+  SWIFT_USER_DOMAIN_NAME: "{{ XQUEUE_SWIFT_USER_DOMAIN_NAME }}"
+  SWIFT_USER_DOMAIN_ID: "{{ XQUEUE_SWIFT_USER_DOMAIN_ID }}"
+  SWIFT_PROJECT_DOMAIN_NAME: "{{ XQUEUE_SWIFT_PROJECT_DOMAIN_NAME }}"
+  SWIFT_PROJECT_DOMAIN_ID: "{{ XQUEUE_SWIFT_PROJECT_DOMAIN_ID }}"
   SWIFT_AUTH_URL: "{{ XQUEUE_SWIFT_AUTH_URL }}"
   SWIFT_AUTH_VERSION: "{{ XQUEUE_SWIFT_AUTH_VERSION }}"
   SWIFT_REGION_NAME: "{{ XQUEUE_SWIFT_REGION_NAME }}"
+  SWIFT_SWIFT_USE_TEMP_URLS: "{{ XQUEUE_SWIFT_USE_TEMP_URLS }}"
+  SWIFT_TEMP_URL_KEY: "{{ XQUEUE_SWIFT_TEMP_URL_KEY }}"
+  SWIFT_AUTO_CREATE_CONTAINER: "{{ XQUEUE_SWIFT_AUTO_CREATE_CONTAINER }}"
+  SWIFT_AUTO_CREATE_CONTAINER_PUBLIC: "{{ XQUEUE_SWIFT_AUTO_CREATE_CONTAINER_PUBLIC }}"
   REQUESTS_BASIC_AUTH: ["{{ XQUEUE_BASIC_AUTH_USER }}", "{{XQUEUE_BASIC_AUTH_PASSWORD}}"]
   USERS: "{{ XQUEUE_DJANGO_USERS }}"
   DATABASES:
